Phase 0 complete: Update documentation for 640K English dataset
- Dataset verified: 640,637 examples (99.46% English)
- Updated all references from 600K to 640K across documentation
- Removed vocabulary trimming from pipeline (breaks architecture)
- English-only optimization through training + pruning strategy
- Added dataset verification script and results
- Created vocab analysis tools (archived, not used for training)

Key Changes:
- IMPLEMENTATION_CHECKLIST.md: Removed vocab trimming tasks
- CURRENT_STATUS.md: Updated dataset size, added English verification
- technical_specification.md: Emphasized English-only training
- EXECUTION_PLAN.md: Removed Week 0-1 vocab optimization
- README.md: Updated all 600K references to 640K
- Added HF_TOKEN to .env.example for LLAMA model access

English Optimization Strategy:
✓ Phase 0: 99.46% English dataset (640K examples)
✓ Phase 1: Train only on English → English-optimized weights
✓ Phase 2: Pruning removes non-English neurons naturally
✓ Phase 2: AWQ quantization uses English calibration
✗ Vocabulary trimming SKIPPED (would break LLAMA architecture)

Ready for Phase 1A: Axolotl QLoRA training on 640K English examples

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # Cogumi-LLM API Keys Configuration (EXAMPLE)
 # Copy this file to .env and fill in your actual API keys
 
+# HuggingFace API Token (for downloading LLAMA models)
+# Get your token at: https://huggingface.co/settings/tokens
+# Required for: LLAMA-3.2-8B base model download
+HF_TOKEN=hf_your_huggingface_token_here
+
 # Groq API Key (for Llama 405B - Primary teacher model)
 # Get your key at: https://console.groq.com/keys
 GROQ_API_KEY=gsk_your_groq_api_key_here
