Add Phase 1B test datasets, H100 training updates, and benchmark automation
- Created 600 test prompts across 6 categories for Phase 1B evaluation
- Added H100_Training_Clean.ipynb with auto-resume capability
- Implemented automated_gpt4_benchmark.py for GPT-4 comparison
- Updated .gitignore to exclude compressed dataset files
- Added Phase 1B benchmark notebook and scripts
- Removed deprecated Colab documentation
- Added H100 setup and migration guides

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ models/*.pt
 
 # Data Files (generated, don't commit - CRITICAL: Large files)
 data/phase1/*.jsonl
+data/phase1/*.gz
 data/phase1/scored/*.jsonl
 data/phase2/*.jsonl
 data/phase3a/*.jsonl
@@ -99,7 +100,9 @@ temp/
 
 # Large data files
 data/raw/*.jsonl
+data/raw/*.gz
 data/phase*/*.jsonl
+data/phase*/*.gz
 
 # Archive folders (local only, not tracked in git)
 docs/archive/
