Fix Unsloth version tag: 2024.7 -> July-2024
Issue: Unsloth repository uses month-name tags (July-2024) not numerical versions (2024.7)
Error: 'git checkout -q 2024.7' did not match any file(s) known to git

Changes:
- Updated requirements-stable-precompiled.txt: unsloth@July-2024
- Updated setup_h100_optimized.sh: July-2024 tag in git install
- Updated README.md: All references to 2024.7 -> July-2024
- Updated PROJECT_STATUS.md: Version reference corrected
- Updated VASTAI_TRAINING_GUIDE.md: Installation comment updated

Verified: July-2024 tag exists in unslothai/unsloth repository
This is the stable version without dependency conflicts

--- a/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
+++ b/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
@@ -64,10 +64,10 @@ datasets==2.19.1
 # ----------------------------------------------------------------------------
 # 5. UNSLOTH - OPTIONAL BUT RECOMMENDED (2-3x speedup)
 # ----------------------------------------------------------------------------
-# Use git version for compatibility
+# Use git version for compatibility (July-2024 tag is stable)
 # This provides Unsloth library WITHOUT pre-quantized base
 # IMPORTANT: Use with full precision meta-llama/Meta-Llama-3.1-8B-Instruct
-unsloth @ git+https://github.com/unslothai/unsloth.git@2024.7
+unsloth @ git+https://github.com/unslothai/unsloth.git@July-2024
 
 # ----------------------------------------------------------------------------
 # 6. SUPPORTING LIBRARIES
