Fix Flash Attention installation order - requires PyTorch first
Issue: Flash Attention build fails with 'ModuleNotFoundError: No module named torch'
Root Cause: Flash Attention's build system checks for PyTorch during wheel metadata
generation. If PyTorch is not installed, pip tries to build Flash Attention from source.

Solution: 2-stage installation process
1. Install PyTorch first (required by Flash Attention build system)
2. Then install remaining dependencies (Flash Attention finds pre-compiled wheel)

Changes:
- Updated requirements-stable-precompiled.txt with prominent installation warning
- Added detailed 2-stage installation instructions at top of file
- Updated VASTAI_TRAINING_GUIDE.md Step 3.3 with 2-stage process
- Updated README.md Quick Start with PyTorch-first installation
- Added explanation of why 2-stage installation is necessary

Installation now:
  # Stage 1: PyTorch
  pip install torch==2.3.1+cu121 torchvision==0.18.1+cu121 torchaudio==2.3.1+cu121 \
      --extra-index-url https://download.pytorch.org/whl/cu121

  # Stage 2: Everything else
  pip install -r requirements-stable-precompiled.txt

This ensures Flash Attention uses pre-compiled wheel (10 sec) instead of
building from source (5-10 min) or failing with build errors.

--- a/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
+++ b/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
@@ -7,6 +7,24 @@
 # ============================================================================
 
 # ============================================================================
+# ⚠️  INSTALLATION WARNING - READ BEFORE INSTALLING ⚠️
+# ============================================================================
+# DO NOT install with: pip install -r requirements-stable-precompiled.txt
+# 
+# CORRECT 2-STAGE INSTALLATION (to avoid Flash Attention build errors):
+#
+# Stage 1: Install PyTorch FIRST
+#   pip install torch==2.3.1+cu121 torchvision==0.18.1+cu121 torchaudio==2.3.1+cu121 \
+#       --extra-index-url https://download.pytorch.org/whl/cu121
+#
+# Stage 2: Install everything else
+#   pip install -r requirements-stable-precompiled.txt
+#
+# Why? Flash Attention's build system needs PyTorch installed to find
+# pre-compiled wheels. Without PyTorch, it tries to build from source and fails.
+# ============================================================================
+
+# ============================================================================
 # CORE PRINCIPLE: Use STABLE versions with pre-compiled wheels
 # - PyTorch 2.3.1 (NOT 2.8.0 which doesn't exist)
 # - Flash Attention 2.5.8 with official pre-compiled wheels
@@ -14,8 +32,15 @@
 # - Unsloth library support (NOT pre-quantized base)
 # ============================================================================
 
+# ============================================================================
+# INSTALLATION ORDER CRITICAL:
+# 1. PyTorch first (required by Flash Attention build system)
+# 2. Flash Attention (pre-compiled, needs PyTorch installed)
+# 3. Everything else (transformers, bitsandbytes, etc.)
+# ============================================================================
+
 # ----------------------------------------------------------------------------
-# 1. PYTORCH STACK - CUDA 12.1 (H100 Compatible)
+# 1. PYTORCH STACK - CUDA 12.1 (H100 Compatible) - INSTALL FIRST
 # ----------------------------------------------------------------------------
 # Install from official PyTorch wheel repository
 # CUDA 12.1 is optimal for H100 80GB
@@ -26,11 +51,12 @@ torchvision==0.18.1+cu121
 torchaudio==2.3.1+cu121
 
 # ----------------------------------------------------------------------------
-# 2. FLASH ATTENTION 2 - PRE-COMPILED WHEELS (CRITICAL!)
+# 2. FLASH ATTENTION 2 - PRE-COMPILED WHEELS (REQUIRES PYTORCH INSTALLED)
 # ----------------------------------------------------------------------------
 # Official pre-compiled wheels from Flash Attention team
 # MUST match PyTorch version (2.3.x) and CUDA version (12.1)
 # Installs in 10 seconds vs 5-10 minutes compilation
+# CRITICAL: PyTorch must be installed first (above)
 --extra-index-url https://flashattn.github.io/whl/cu121/torch2.3/
 
 flash-attn==2.5.8
