Fix huggingface-hub version conflict (0.23.0 -> 0.23.4)
- transformers 4.43.3 requires huggingface-hub>=0.23.2
- Updated from 0.23.0 to 0.23.4 to satisfy dependency
- Resolves pip ResolutionImpossible error

--- a/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
+++ b/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
@@ -124,8 +124,8 @@ numpy==1.26.4
 scipy==1.13.0
 scikit-learn==1.4.2
 
-# HuggingFace Hub
-huggingface-hub==0.23.0
+# HuggingFace Hub (>=0.23.2 required by transformers 4.43.3)
+huggingface-hub==0.23.4
 
 # Logging and monitoring
 tensorboard==2.16.2
