Add complete clean uninstall procedure (Stage 0)
Added comprehensive clean uninstall step to start completely fresh:

Stage 0 (new): Complete Clean Uninstall
- Uninstalls ALL relevant packages: torch, xformers, transformers, psutil,
  flash-attn, bitsandbytes, peft, accelerate, trl, unsloth
- Ensures no version conflicts from previous installations
- Verification step: pip list | grep should show nothing

Also includes --upgrade-strategy only-if-needed in Stage 4 to prevent
reinstalling PyTorch when installing xformers.

Complete Clean Start Commands:
1. Stage 0: pip uninstall [all packages] -y
2. Stage 1: pip install torch torchvision torchaudio --index-url cu124
3. Stage 2: pip install psutil==5.9.8
4. Stage 3: pip install flash-attn --no-build-isolation
5. Stage 4: pip install -r requirements.txt --upgrade-strategy only-if-needed

Updated Files:
- VASTAI_TRAINING_GUIDE.md: Added Stage 0 complete uninstall
- requirements-stable-precompiled.txt: Added Stage 0 to installation sequence
- README.md: Added Stage 0 as optional clean start step

--- a/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
+++ b/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
@@ -24,6 +24,10 @@
 #
 # INSTALLATION SEQUENCE FOR CUDA 12.4:
 #
+#   # Stage 0: Complete Clean Uninstall (if reinstalling)
+#   pip uninstall torch torchvision torchaudio xformers transformers \
+#       psutil flash-attn bitsandbytes peft accelerate trl unsloth -y
+#
 #   # Stage 1: PyTorch first (CUDA 12.4) - CLEAN INSTALL
 #   pip uninstall torch torchvision torchaudio -y
 #   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
@@ -38,7 +42,9 @@
 #   python -c "import flash_attn; print('✅ Flash Attention installed')"
 #
 #   # Stage 4: Everything else
-#   pip install -r requirements-stable-precompiled.txt
+#   pip install -r requirements-stable-precompiled.txt --upgrade-strategy only-if-needed
+#
+# Note: --upgrade-strategy only-if-needed prevents reinstalling PyTorch/xformers
 #
 # ============================================================================
 
