--- a/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
+++ b/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
@@ -52,9 +52,13 @@
 # CORE PRINCIPLE: Use STABLE versions with pre-compiled wheels
 # - PyTorch 2.6.0+cu124 (latest stable for CUDA 12.4)
 # - Flash Attention 2.x (auto-selected for CUDA 12.4)
-# - xformers (auto-selected to match PyTorch version)
+# - xformers 0.0.28.post2 (PINNED for torch 2.6.0 compatibility)
 # - Transformers 4.43.3 (stable, Llama 3.1 support)
 # - Unsloth July-2024 (2-3× training speedup)
+#
+# CRITICAL: xformers version MUST match PyTorch version
+# - torch 2.6.0 → xformers 0.0.28.post2 or 0.0.29
+# - torch 2.8.0 → xformers 0.0.32+ (DO NOT USE with torch 2.6.0)
 # ============================================================================
 
 # ============================================================================
@@ -116,10 +120,10 @@ datasets==2.19.1
 # ----------------------------------------------------------------------------
 # xformers provides memory-efficient attention operations
 # Required by Unsloth for 2-3× speedup
-# Version auto-selected by pip to match PyTorch version
-# For PyTorch 2.6.0+cu124: xformers will auto-select compatible version
-# Note: Use flexible version constraint to avoid torch version conflicts
-xformers>=0.0.26
+# Version MUST match PyTorch version
+# For PyTorch 2.6.0+cu124: Use xformers 0.0.28.post2 or 0.0.29
+# DO NOT use xformers 0.0.32+ (requires torch 2.8.0)
+xformers==0.0.28.post2
 
 # ----------------------------------------------------------------------------
 # 6. UNSLOTH - OPTIONAL BUT RECOMMENDED (2-3x speedup)
