--- a/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
+++ b/Phase1A_2_0/scripts/requirements-stable-precompiled.txt
@@ -28,20 +28,21 @@
 #   pip uninstall torch torchvision torchaudio xformers transformers \
 #       psutil flash-attn bitsandbytes peft accelerate trl unsloth -y
 #
-#   # Stage 1: PyTorch first (CUDA 12.4) - CLEAN INSTALL
+#   # Stage 1: PyTorch 2.6.0 (PINNED VERSION for xformers compatibility)
 #   pip uninstall torch torchvision torchaudio -y
-#   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
+#   pip install torch==2.6.0 torchvision==0.21.0 torchaudio==2.6.0 \
+#       --index-url https://download.pytorch.org/whl/cu124
 #   python -c "import torch; print(f'✅ PyTorch {torch.__version__} installed')"
 #
 #   # Stage 2: psutil (required by Flash Attention)
 #   pip install psutil==5.9.8
 #   python -c "import psutil; print('✅ psutil installed')"
 #
-#   # Stage 3: Flash Attention with --no-build-isolation
-#   pip install flash-attn --no-build-isolation
-#   python -c "import flash_attn; print('✅ Flash Attention installed')"
+#   # Stage 3: Flash Attention 2.8.2 (pre-built for torch 2.6.0 + CUDA 12.4)
+#   pip install https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v2.8.2/flash_attn-2.8.2+cu124torch2.6-cp310-cp310-linux_x86_64.whl
+#   python -c "import flash_attn; print('✅ Flash Attention 2.8.2 installed')"
 #
-#   # Stage 4: Everything else
+#   # Stage 4: Everything else (includes xformers==0.0.28.post2)
 #   pip install -r requirements-stable-precompiled.txt --upgrade-strategy only-if-needed
 #
 # Note: --upgrade-strategy only-if-needed prevents reinstalling PyTorch/xformers
@@ -50,8 +51,8 @@
 
 # ============================================================================
 # CORE PRINCIPLE: Use STABLE versions with pre-compiled wheels
-# - PyTorch 2.6.0+cu124 (latest stable for CUDA 12.4)
-# - Flash Attention 2.x (auto-selected for CUDA 12.4)
+# - PyTorch 2.6.0+cu124 (PINNED for compatibility)
+# - Flash Attention 2.8.2 (pre-built for torch 2.6.0 + CUDA 12.4)
 # - xformers 0.0.28.post2 (PINNED for torch 2.6.0 compatibility)
 # - Transformers 4.43.3 (stable, Llama 3.1 support)
 # - Unsloth July-2024 (2-3× training speedup)
@@ -59,6 +60,8 @@
 # CRITICAL: xformers version MUST match PyTorch version
 # - torch 2.6.0 → xformers 0.0.28.post2 or 0.0.29
 # - torch 2.8.0 → xformers 0.0.32+ (DO NOT USE with torch 2.6.0)
+#
+# Flash Attention pre-built wheels: https://github.com/mjun0812/flash-attention-prebuild-wheels
 # ============================================================================
 
 # ============================================================================
@@ -81,13 +84,12 @@
 # 2. FLASH ATTENTION 2 - MUST BE INSTALLED SEPARATELY
 # ----------------------------------------------------------------------------
 # ⚠️  FLASH ATTENTION NOT IN THIS FILE - INSTALL MANUALLY
-# Flash Attention's build system imports torch during setup.py execution
-# Must use --no-build-isolation flag (cannot be specified in requirements.txt)
+# Using pre-built wheel for torch 2.6.0 + CUDA 12.4 from mjun0812's repository
 # 
 # MANUAL INSTALLATION REQUIRED (Stage 3):
-#   pip install flash-attn --no-build-isolation
+#   pip install https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v2.8.2/flash_attn-2.8.2+cu124torch2.6-cp310-cp310-linux_x86_64.whl
 #
-# See installation guide for correct sequence
+# Pre-built wheels repository: https://github.com/mjun0812/flash-attention-prebuild-wheels/releases
 
 # ----------------------------------------------------------------------------
 # 3. BITSANDBYTES - PRE-COMPILED WHEELS
